fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/Contract_Renewal_Item__c.object-meta.xml
<CustomObject>
    <label>Contract Renewal Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Contract Renewal Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Renewal Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>