fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Approval_Flag__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flag__c</fullName>
    <formula>IF( 
OR( 
    Requested_Increase__c  &lt; Default_Per_Increase__c,
    Default_Per_Increase__c = 0,
 Requested_Renewal_Price__c &lt;  Product_Floor_Price__c 
  )
,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>