fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/BelowGp__c.field-meta.xml
<CustomField>
    <fullName>BelowGp__c</fullName>
    <formula>IF(Current_Gross_Profit__c * 100 &lt; 0, 1, 
IF(Current_Gross_Profit__c * 100 &lt; 30, 2, 0
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BelowGp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>