fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Contract_Material__c.field-meta.xml
<CustomField>
    <fullName>Contract_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Material</label>
    <referenceTo>Contract_Material__c</referenceTo>
    <relationshipLabel>Contract Renewal Items</relationshipLabel>
    <relationshipName>Contract_Renewal_Items</relationshipName>
    <type>Lookup</type>
</CustomField>