fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Contract_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Contract_Renewal__c</fullName>
    <label>Contract Renewal</label>
    <referenceTo>Contract_Renewal__c</referenceTo>
    <relationshipLabel>Contract Renewal Items</relationshipLabel>
    <relationshipName>Contract_Renewal_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>