fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Current_Price_with_30_GP__c.field-meta.xml
<CustomField>
    <fullName>Current_Price_with_30_GP__c</fullName>
    <formula>(Product__r.Cost_Formula__c / 0.70)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Price with 30% GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>