fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Default_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Default_Gross_Profit__c</fullName>
    <formula>(Default_Renewal_Price__c - Product__r.Cost_Formula__c)/Default_Renewal_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>