fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Default_Per_Increase__c.field-meta.xml
<CustomField>
    <fullName>Default_Per_Increase__c</fullName>
    <label>Default % Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>