fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Default_Renewal_Price__c.field-meta.xml
<CustomField>
    <fullName>Default_Renewal_Price__c</fullName>
    <label>Default Renewal Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>