fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Detail_Contracts_Notes__c.field-meta.xml
<CustomField>
    <fullName>Detail_Contracts_Notes__c</fullName>
    <label>Detail Contracts Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>