fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Final_Increase__c.field-meta.xml
<CustomField>
    <fullName>Final_Increase__c</fullName>
    <label>Final % Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>