fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price__c</fullName>
    <formula>Product__r.Floor_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>