fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Material_Line_Note__c.field-meta.xml
<CustomField>
    <fullName>Material_Line_Note__c</fullName>
    <label>Material Line Note</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Renew, Standard Increase</fullName>
            </value>
            <value>
                <fullName>Renew, Larger Than Standard Increase To Meet Guidelines</fullName>
            </value>
            <value>
                <fullName>Renew, No Increase</fullName>
            </value>
            <value>
                <fullName>Renew, Recent Addition - No Increase</fullName>
            </value>
            <value>
                <fullName>Renew, Other - See Notes</fullName>
            </value>
            <value>
                <fullName>Do Not Renew</fullName>
            </value>
            <value>
                <fullName>Do Not Renew, Lack of Sales</fullName>
            </value>
            <value>
                <fullName>Do Not Renew, Discontinued</fullName>
            </value>
            <value>
                <fullName>Do Not Renew, Renewal Price Above List</fullName>
            </value>
            <value>
                <fullName>Do Not Renew, Lower Contract Pricing Available</fullName>
            </value>
            <value>
                <fullName>Do Not Renew, Other - See Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>