fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Material_Status__c.field-meta.xml
<CustomField>
    <fullName>Material_Status__c</fullName>
    <formula>LEFT(Product__r.Material_Status__c, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Status</label>
    <type>Text</type>
</CustomField>