fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Contract Renewal Items</relationshipLabel>
    <relationshipName>Contract_Renewal_Items</relationshipName>
    <type>Lookup</type>
</CustomField>