fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Product_Floor_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Floor_Price__c</fullName>
    <description>This field is required for aproval flad calculations, it will be sync with a Workflow Rule</description>
    <label>Product Floor Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>