fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Recently_Added__c.field-meta.xml
<CustomField>
    <fullName>Recently_Added__c</fullName>
    <formula>IF(NOT(ISBLANK( TODAY() )) &amp;&amp; NOT(ISBLANK(Valid_From__c))
     ,(((YEAR( TODAY()  ) - YEAR(Valid_From__c ) - 1) *12) + (12 - MONTH(Valid_From__c ) +1) + MONTH( TODAY() ))
     , null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recently Added</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>