fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Requested_Increase__c.field-meta.xml
<CustomField>
    <fullName>Requested_Increase__c</fullName>
    <label>Requested % Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>