fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Requested_Price_GP__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price_GP__c</fullName>
    <formula>(Requested_Renewal_Price__c - Product__r.Cost_Formula__c)/Requested_Renewal_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested Price GP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>