fullSandbox11072023/force-app/main/default/objects/Contract_Renewal_Item__c/fields/Sales_at_Standard_Increase__c.field-meta.xml
<CustomField>
    <fullName>Sales_at_Standard_Increase__c</fullName>
    <formula>(Sales__c * Final_Increase__c) + Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales at Standard Increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>